--- a/bawabati/.env
+++ b/bawabati/.env
@@ -1,9 +1,11 @@
-DJANGO_SECRET_KEY=django-insecure-5g0g9*f*5y^60ny60)2i8pbfqyec^e9@5&43%r)o4g7o!m+9!t
+# Django configuration
+DJANGO_SECRET_KEY=django-insecure-random-key
 DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 
+# Database settings
 DB_NAME=bawabati_db
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_HOST=localhost
-DB_PORT=3306 
+DB_PORT=3306
